fix: update CORS configuration to allow Vercel domain